--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="public/stylesheets/style.css">
   <meta name="title" property="og:title" content="Michael Fatigati" />
-  <meta name="description" property="og:description" content="I'm a full stack software engineer in the San Fransisco Bay Area & co-creator of Mashr" />
+  <meta name="description" property="og:description" content="I'm a full stack software engineer based in Austin, Texas, and co-creator of Sentinel" />
   <meta name="type" property="og:type" content="website" />
-  <meta name="url" property="og:url" content="http://jacobcd.io" />
+  <meta name="url" property="og:url" content="http://michaelfatigati.dev" />
   <meta name="image" property="og:image" content="public/assets/images/android-icon-192x192.png" />
   <meta name="author" content="Michael Fatigati" />
   <!-- ICONS -->
