--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="title" property="og:title" content="Michael Fatigati" />
   <meta name="description" property="og:description" content="I'm a full stack software engineer based in Austin, Texas, and co-creator of Sentinel" />
   <meta name="type" property="og:type" content="website" />
-  <meta name="url" property="og:url" content="http://michaelfatigati.dev" />
+  <meta name="url" property="og:url" content="https://www.michaelfatigati.dev" />
   <meta name="image" property="og:image" content="public/favicons/android-chrome-192x192.png" /> 
   <meta name="author" content="Michael Fatigati" />
   <!-- ICONS -->
