--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
 
 <!DOCTYPE html>
 <html lang="en-US" prefix="og: http://opg.me/ns#">
+
 <head>
   <title>Michael Fatigati</title>
+  <meta name="description" content="I'm a full stack software engineer based in Austin, Texas, and co-creator of Sentinel">
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="public/stylesheets/style.css">
+  <meta name="author" content="Michael Fatigati" />
+  <!-- OG TAGS -->
   <meta name="title" property="og:title" content="Michael Fatigati" />
   <meta name="description" property="og:description" content="I'm a full stack software engineer based in Austin, Texas, and co-creator of Sentinel" />
   <meta name="type" property="og:type" content="website" />
   <meta name="url" property="og:url" content="https://www.michaelfatigati.dev" />
   <meta name="image" property="og:image" content="public/favicons/android-chrome-192x192.png" /> 
-  <meta name="author" content="Michael Fatigati" />
+  <meta property="og:url" content="https://www.michaelfatigati.dev/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Michael Fatigati">
+  <meta property="og:description" content="I'm a full stack software engineer based in Austin, Texas, and co-creator of Sentinel">
+  <meta property="og:image" content="https://michaelfatigati.devpublic/favicons/android-chrome-192x192.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="michaelfatigati.dev">
+  <meta property="twitter:url" content="https://www.michaelfatigati.dev/">
+  <meta name="twitter:title" content="Michael Fatigati">
+  <meta name="twitter:description" content="I'm a full stack software engineer based in Austin, Texas, and co-creator of Sentinel">
+  <meta name="twitter:image" content="https://michaelfatigati.devpublic/favicons/android-chrome-192x192.png">
   <!-- ICONS -->
   <link rel="apple-touch-icon" sizes="180x180" href="public/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="public/favicons//favicon-32x32.png">
