--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en-US" prefix="og: http://opg.me/ns#">
 
 <head>
+
   <title>Michael Fatigati</title>
   <meta name="description" content="I'm a full stack software engineer based in Austin, Texas, and co-creator of Sentinel">
   <meta charset="utf-8"/>
@@ -11,10 +12,10 @@
   <meta name="author" content="Michael Fatigati" />
   <!-- OG TAGS -->
   <meta name="title" property="og:title" content="Michael Fatigati" />
-  <meta name="description" property="og:description" content="I'm a full stack software engineer based in Austin, Texas, and co-creator of Sentinel" />
+  <!-- <meta name="description" property="og:description" content="I'm a full stack software engineer based in Austin, Texas, and co-creator of Sentinel" />
   <meta name="type" property="og:type" content="website" />
   <meta name="url" property="og:url" content="https://www.michaelfatigati.dev" />
-  <meta name="image" property="og:image" content="public/favicons/android-chrome-192x192.png" /> 
+  <meta name="image" property="og:image" content="public/favicons/android-chrome-192x192.png" />  -->
   <meta property="og:url" content="https://www.michaelfatigati.dev/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Michael Fatigati">
