demo of carousel

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html lang="en-US" prefix="og: http://opg.me/ns#">
 
 <head>
-
   <title>Michael Fatigati</title>
   <meta name="description" content="I'm a full stack software engineer based in Austin, Texas, and co-creator of Sentinel">
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="public/stylesheets/style.css">
+  <link rel="stylesheet" href="public//stylesheets/carousel.css" />
   <meta name="author" content="Michael Fatigati" />
   <!-- OG TAGS -->
   <meta name="title" property="og:title" content="Michael Fatigati" />
@@ -55,7 +55,7 @@
         <h3 id="name">Michael Fatigati</h3>
       </div>
       <div>
-        <p>I'm a full stack software engineer based in Austin, Texas. Recently I built <a href="#sentinel">Sentinel</a>, an open source platform as a service (PaaS), with built in support for upgrading applications via canary deployments.</p>
+        <p>I'm a full-stack software engineer based in Austin, Texas. Recently I built <a href="#sentinel">Sentinel</a>, an open-source platform as a service (PaaS), with built-in support for upgrading applications via canary deployments.</p>
         <p>I have multiple years of experience in the JavaScript/Node.js and Go ecosystems, and I'm comfortable working with AWS infrastructure, Docker swarm mode, PostgreSQL, Prometheus, and more.</p>
         <p>I also have a PhD in Classical Arabic philosophy, and my passion for investigating questions and mastering languages has found a happy home in software.</p></p>
       </div>
@@ -64,14 +64,13 @@
     <section id="sentinel">
       <a href="https://sentinel-paas.github.io" target="blank"><h1>Sentinel</h1></a>
       <div>
-        <p><a href="https://sentinel-paas.github.io" target="blank">Sentinel</a> is an open source, cloud-agnostic, self-hosted platform as a service (PaaS) that can easily deploy multiple database-backed web applications, with built in support for upgrading applications via canary deployments.</p>
+        <p><a href="https://sentinel-paas.github.io" target="blank">Sentinel</a> is an open source, cloud-agnostic, self-hosted platform as a service (PaaS) that can easily deploy multiple database-backed web applications, with built in support for upgrading applications via <span>canary deployments.</span></p>
         <img id="sentinel-logo" src="public/assets/images/Sentinel_graphic_color_smaller.png" alt="sentinel-logo">
       </div>
       <div>
         <img class="sentinel-demo" src="public/assets/images/cli.png" alt="sentinel cli demo">
         <div>
-
-          <p>Sentinel provides a straightforward CLI, and uses Terraform and Ansible to provision and configure cloud infrastructure, Docker in Swarm Mode for container orchestration, and Traefik for canary traffic-splitting and sticky-sessions.</p>
+          <p>Sentinel provides a straightforward <span>CLI</span>, and uses <span>Terraform and Ansible</span> to provision and configure cloud infrastructure, <span>Docker in Swarm Mode</span> for container orchestration, and <span>Traefik</span> for canary traffic-splitting and sticky-sessions.</p>
           <!-- <p>Sentinel provides an easy-to-use CLI, and uses:</p>
           <ul>
             <li>Terraform and Ansible to provision and configure cloud infrastructure</li>
@@ -82,30 +81,51 @@
       </div>
       <div>
         <div>
-          <p>Every application deployed via Sentinel is automatically integrated with a monitoring stack consisting of Node-Exporter, Prometheus, and Grafana.</p>
+          <p>Every application deployed via Sentinel is automatically integrated with a monitoring stack consisting of <span>Node-Exporter, Prometheus, and Grafana.</span></p>
         </div>
         <img class="sentinel-demo" src="public/assets/images/monitoring_small2.gif" alt="sentinel monitoring demo">
       </div>
       <a id="sentinel-repo-btn" class="btn" target="_blank" href="https://sentinel-paas.github.io">READ THE SENTINEL CASE STUDY</a>
     </section>
     <!-- other projects -->
+    <h2 id="other-projects">Other projects</h2>
+    <div class="gallery">
+      <div class="gallery-container">
+        <img class="gallery-item small-project-1" src="public/assets/images/small_projects_hookie.png">
+        <img class="gallery-item small-project-2" src="public/assets/images/small_project_todos.png">
+        <img class="gallery-item small-project-3" src="public/assets/images/small_projects_mello.png">
+        <img class="gallery-item small-project-4" src="public/assets/images/small_projects_references.png">
+        <!-- <img class="gallery-item" src="public/assets/images/small_projects_mello.png"> -->
+      </div>
+      <div class="gallery-controls"></div>
+      <h4 class="small-project-1">Hookie</h4>
+      <h4 class="small-project-2">Task Manager</h4>
+      <h4 class="small-project-3">Mello</h4>
+      <h4 class="small-project-4">Reference Manager</h4>
+      <div id="caption-container">
+        <p class="small-project-1">Develop, receive & debug webhooks (TypeScript, Pug, PostgresSQL, MongoDB)</p>
+        <p class="small-project-2">Allows authenticated users to manage their todo lists (Express, JQuery, Handlebars, SQLite)</p>
+        <p class="small-project-3">A collaboration and project organization app based on Trello (Express, React/Redux, MongoDB)</p>
+        <p class="small-project-4">Organize references for research papers and generate bibliographies to text files (Go's net/http and html/template libraries, PostgresSQL)</p>
+      </div>
+    </div>
     <section id="projects" class="flexbox horz-center">
         <h2>Other projects</h2>
         <ul class="flexbox vert-center">
           <li>
-            <img src="public/assets/images/small_projects_references.png" alt="Screenshot of airline routes viewer application" />
+            <img src="public/assets/images/small_projects_references.png" alt="Screenshot of reference application" />
             <h4>Reference Manager</h4>
-            <p>Organize references for research papers and generate bibliographies to text files (Go's net/http and html/template libraries, PostgresSQL)</p>.
+            <p>Organize references for research papers and generate bibliographies to text files (Go's net/http and html/template libraries, PostgresSQL)</p>
           </li>
           <li>
-            <img src="public/assets/images/small_projects_hookie.png" alt="Screenshot of postit application" />
+            <img src="public/assets/images/small_projects_hookie.png" alt="Screenshot of hookie application" />
             <h4>Hookie</h4>
             <p>Develop, receive & debug webhooks (TypeScript, Pug, PostgresSQL, MongoDB)</p>
           </li>
       </ul>
       <ul class="flexbox vert-center">
           <li>
-            <img src="public/assets/images/small_projects_mello.png" alt="Screenshot of todos application" />
+            <img src="public/assets/images/small_projects_mello.png" alt="Screenshot of mello application" />
             <h4>Mello</h4>
             <p>A collaboration and project organization app based on Trello (Express, React/Redux, MongoDB)</p>
           </li>
@@ -142,5 +162,6 @@
       </ul>
     </section>
   </main>
+  <script src="public/assets/javascripts/carousel.js"></script>
 </body>
 </html>
