--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <div class="gallery-controls"></div>
       <h4 class="small-project-1">Hookie</h4>
       <h4 class="small-project-2">Task Manager</h4>
-      <h4 class="small-project-3">Mello</h4>
+      <h4 class="small-project-3">Mellow</h4>
       <h4 class="small-project-4">Reference Manager</h4>
       <div id="caption-container">
         <p class="small-project-1">Develop, receive & debug webhooks (TypeScript, Pug, PostgresSQL, MongoDB)</p>
@@ -126,7 +126,7 @@
       <ul class="flexbox vert-center">
           <li>
             <img src="public/assets/images/small_projects_mello.png" alt="Screenshot of mello application" />
-            <h4>Mello</h4>
+            <h4>Mellow</h4>
             <p>A collaboration and project organization app based on Trello (Express, React/Redux, MongoDB)</p>
           </li>
           <li>
