removed carousel, adjust small projects for small screens

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="description" content="I'm a full stack software engineer based in Austin, Texas, and co-creator of Sentinel">
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="public/stylesheets/style.css">
-  <link rel="stylesheet" href="public//stylesheets/carousel.css" />
+  <link rel="stylesheet" href="public/stylesheets/style.css" />
   <meta name="author" content="Michael Fatigati" />
   <!-- OG TAGS -->
   <meta name="title" property="og:title" content="Michael Fatigati" />
@@ -57,7 +56,7 @@
       <div>
         <p>I'm a full-stack software engineer based in Austin, Texas. Recently I built <a href="#sentinel">Sentinel</a>, an open-source platform as a service (PaaS), with built-in support for upgrading applications via canary deployments.</p>
         <p>I have multiple years of experience in the JavaScript/Node.js and Go ecosystems, and I'm comfortable working with AWS infrastructure, Docker swarm mode, PostgreSQL, Prometheus, and more.</p>
-        <p>I also have a PhD in Classical Arabic philosophy, and my passion for investigating questions and mastering languages has found a happy home in software.</p></p>
+        <p>I also have a PhD in Classical Arabic philosophy, and my passion for investigating questions and mastering languages has found a happy home in software.</p>
       </div>
     </section>
     <!-- sentinel -->
@@ -88,54 +87,31 @@
       <a id="sentinel-repo-btn" class="btn" target="_blank" href="https://sentinel-paas.github.io">READ THE SENTINEL CASE STUDY</a>
     </section>
     <!-- other projects -->
-    <h2 id="other-projects">Other projects</h2>
-    <div class="gallery">
-      <div class="gallery-container">
-        <img class="gallery-item small-project-1" src="public/assets/images/small_projects_hookie.png">
-        <img class="gallery-item small-project-2" src="public/assets/images/small_project_todos.png">
-        <img class="gallery-item small-project-3" src="public/assets/images/small_projects_mello.png">
-        <img class="gallery-item small-project-4" src="public/assets/images/small_projects_references.png">
-        <!-- <img class="gallery-item" src="public/assets/images/small_projects_mello.png"> -->
-      </div>
-      <div class="gallery-controls"></div>
-      <h4 class="small-project-1">Hookie</h4>
-      <h4 class="small-project-2">Task Manager</h4>
-      <h4 class="small-project-3">Mellow</h4>
-      <h4 class="small-project-4">Reference Manager</h4>
-      <div id="caption-container">
-        <p class="small-project-1">Develop, receive & debug webhooks (TypeScript, Pug, PostgresSQL, MongoDB)</p>
-        <p class="small-project-2">Allows authenticated users to manage their todo lists (Express, JQuery, Handlebars, SQLite)</p>
-        <p class="small-project-3">A collaboration and project organization app based on Trello (Express, React/Redux, MongoDB)</p>
-        <p class="small-project-4">Organize references for research papers and generate bibliographies to text files (Go's net/http and html/template libraries, PostgresSQL)</p>
-      </div>
-    </div>
-    <section id="projects" class="flexbox horz-center">
-        <h2>Other projects</h2>
-        <ul class="flexbox vert-center">
-          <li>
-            <img src="public/assets/images/small_projects_references.png" alt="Screenshot of reference application" />
-            <h4>Reference Manager</h4>
-            <p>Organize references for research papers and generate bibliographies to text files (Go's net/http and html/template libraries, PostgresSQL)</p>
-          </li>
-          <li>
-            <img src="public/assets/images/small_projects_hookie.png" alt="Screenshot of hookie application" />
-            <h4>Hookie</h4>
-            <p>Develop, receive & debug webhooks (TypeScript, Pug, PostgresSQL, MongoDB)</p>
-          </li>
+    <section id="projects">
+      <h2>Other projects</h2>
+      <ul>
+        <li>
+          <img src="public/assets/images/small_projects_reference.png" alt="Screenshot of reference application" />
+          <h4>Reference Manager</h4>
+          <p>Organize references for research papers and generate bibliographies to text files (Go's net/http and html/template libraries, PostgresSQL)</p>
+        </li>
+        <li>
+          <img src="public/assets/images/small_projects_hookie.png" alt="Screenshot of hookie application" />
+          <h4>Hookie</h4>
+          <p>Develop, receive & debug webhooks (TypeScript, Pug, PostgresSQL, MongoDB)</p>
+        </li>
+        <li>
+          <img src="public/assets/images/small_projects_mello.png" alt="Screenshot of mello application" />
+          <h4>Mellow</h4>
+          <p>A collaboration and project organization app based on Trello (Express, React/Redux, MongoDB)</p>
+        </li>
+        <li>
+          <img src="public/assets/images/small_project_todos.png" alt="Screenshot of todos application" />
+          <h4>Task Manager</h4>
+          <p>Allows authenticated users to manage their todo lists (Express, JQuery, Handlebars, SQLite)</p>
+        </li>
       </ul>
-      <ul class="flexbox vert-center">
-          <li>
-            <img src="public/assets/images/small_projects_mello.png" alt="Screenshot of mello application" />
-            <h4>Mellow</h4>
-            <p>A collaboration and project organization app based on Trello (Express, React/Redux, MongoDB)</p>
-          </li>
-          <li>
-            <img src="public/assets/images/small_project_todos.png" alt="Screenshot of todos application" />
-            <h4>Task Manager</h4>
-            <p>Allows authenticated users to manage their todo lists (Express, JQuery, Handlebars, SQLite)</p>
-          </li>
-        </ul>
-      </section>
+    </section>
     <section id="contact" class="flexbox horz-center">
       <h3>Connect with me</h3>
       <ul class="flexbox vert-center">
@@ -162,6 +138,5 @@
       </ul>
     </section>
   </main>
-  <script src="public/assets/javascripts/carousel.js"></script>
 </body>
 </html>
