updated media queries for narrow browsers

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div>
         <img class="sentinel-demo" src="public/assets/images/cli.png" alt="sentinel cli demo">
         <div>
-          <p>Sentinel provides a straightforward <span>CLI</span>, and uses <span>Terraform and Ansible</span> to provision and configure cloud infrastructure, <span>Docker in Swarm Mode</span> for container orchestration, and <span>Traefik</span> for canary traffic-splitting and sticky-sessions.</p>
+          <p>Sentinel provides a straightforward <span>CLI</span>, and uses <span>Terraform and Ansible</span> to provision and configure cloud infrastructure, <span>Docker in swarm mode</span> for container orchestration, and <span>Traefik</span> for canary traffic-splitting and sticky-sessions.</p>
           <!-- <p>Sentinel provides an easy-to-use CLI, and uses:</p>
           <ul>
             <li>Terraform and Ansible to provision and configure cloud infrastructure</li>
