--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <h3 id="name">Michael Fatigati</h3>
       </div>
       <div>
-        <p>I'm a full-stack software engineer based in Austin, Texas. Recently I built <a href="#sentinel">Sentinel</a>, an open-source platform as a service (PaaS), with built-in support for upgrading applications via canary deployments.</p>
-        <p>I have multiple years of experience in the JavaScript/Node.js and Go ecosystems, and I'm comfortable working with AWS infrastructure, Docker swarm mode, PostgreSQL, Prometheus, and more.</p>
-        <p>I also have a PhD in Classical Arabic philosophy, and my passion for investigating questions and mastering languages has found a happy home in software.</p>
+        <p class="p-wide">I'm a full-stack software engineer based in Austin, Texas. Recently I built <a href="#sentinel">Sentinel</a>, an open-source platform as a service (PaaS), with built-in support for upgrading applications via canary deployments.</p>
+        <p class="p-wide">I have multiple years of experience in the JavaScript/Node.js and Go ecosystems, and I'm comfortable working with AWS infrastructure, Docker swarm mode, PostgreSQL, Prometheus, and more.</p>
+        <p class="p-wide">I also have a PhD in Classical Arabic philosophy, and my passion for investigating questions and mastering languages has found a happy home in software.</p>
       </div>
     </section>
     <section id="intro-narrow" class="flexbox horz-center">
