updated links, border radius and projects

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
     <section id="sentinel" class="flexbox horz-center">
       <div id="sentinel-info-container" class="flexbox">
         <div class="flexbox horz-center">
-          <p id="sentinel-header">Sentinel</p>
+          <p id="sentinel-header"><a href="https://sentinel-paas.github.io/" target="blank">Sentinel</a></p>
         </div>
         <div id="canary-container">
-          <img id="sentinel-info-img-1" src="public/assets/images/Sentinel_graphic_color_smaller.png" alt="sentinel logo" />
+          <a href="https://sentinel-paas.github.io/" target="blank"><img id="sentinel-info-img-1" src="public/assets/images/Sentinel_graphic_color_smaller.png" alt="sentinel logo" /></a>
         </div>
       </div>
       <div id="sentinel-info-container" class="flexbox">
@@ -76,7 +76,7 @@
           <img id="sentinel-info-img" src="public/assets/images/cli.png" alt="sentinel cli" />
         </div>
         <div class="flexbox horz-center">
-          <p><a href="https://sentinel-paas.github.io" target="blank">Sentinel</a> is an open source, cloud-agnostic, self-hosted platform as a service (PaaS) that can easily deploy multiple database-backed web applications, with built in support for upgrading applications via <span>canary deployments.</span></p>
+          <p><a href="https://sentinel-paas.github.io" target="blank" class="sentinel-link">Sentinel</a> is an open source, cloud-agnostic, self-hosted platform as a service (PaaS) that can easily deploy multiple database-backed web applications, with built in support for upgrading applications via <span>canary deployments.</span></p>
           <p>Sentinel provides a straightforward <span>CLI</span>, and uses <span>Terraform and Ansible</span> to provision and configure cloud infrastructure, <span>Docker in swarm mode</span> for container orchestration, and <span>Traefik</span> for canary traffic-splitting and sticky-sessions.</p>
         </div>
       </div>
