--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <li>
             <img src="public/assets/images/small_project_todos.png" alt="Screenshot of postit application" />
             <h4>Task Manager</h4>
-            <p>Allows authenticated users to manage their todo lists (Express, JQuery, Handlebars, SQLite). Is everything okay?</p>
+            <p>Allows authenticated users to manage their todo lists (Express, JQuery, Handlebars, SQLite)</p>
           </li>
         </ul>
       </section>
